# libomptarget

./: .gitignore  CMakeLists.txt  Makefile  README.md
DevRTLs/: CMakeLists.txt  Makefile
DevRTLs/nvptx/: CMakeLists.txt  Makefile
DevRTLs/nvptx/src/: cancel.cu  counter_group.h  counter_groupi.h  critical.cu  debug.cu  debug.h  interface.h  libcall.cu  loop.cu  omptarget-nvptx.cu  omptarget-nvptx.h  omptarget-nvptxi.h  option.h  parallel.cu  reduction.cu  stdio.cu  support.h  supporti.h  sync.cu  task.cu
RTLs/: CMakeLists.txt  Makefile
RTLs/cuda/: CMakeLists.txt  Makefile
RTLs/cuda/src/: rtl.cpp
RTLs/generic-64bit/src/: rtl.cpp
RTLs/ppc64/: CMakeLists.txt  Makefile
RTLs/ppc64le/: CMakeLists.txt  Makefile
RTLs/x86_64/: CMakeLists.txt  Makefile
cmake/Modules/: FindLibElf.cmake  FindLibFFI.cmake
src/: omptarget.cpp  omptarget.h  targets_info.cpp  targets_info.h
