##===----------------------------------------------------------------------===##
# 
#                     The LLVM Compiler Infrastructure
#
# This file is distributed under the University of Illinois Open Source
# License. See LICENSE.TXT for details.
# 
# ##===----------------------------------------------------------------------===##
#
# Build the device RTL for each available machine available
#
##===----------------------------------------------------------------------===##

add_subdirectory(nvptx)
